--- a/css/style.css
+++ b/css/style.css
@@ -159,16 +159,68 @@ header .links li .header__link {
 header .buttons {
   margin-right: 28px;
   display: flex;
+  align-items: center;
 }
 header .buttons button {
+  width: 24px;
   border: none;
   background-color: transparent;
 }
 header .buttons button:not(:last-child) {
   margin-right: 17px;
 }
-header .buttons button:hover {
+header .buttons button:hover:not(.burger) {
   transform: scale(1.2);
+}
+header .burger {
+  height: 18px;
+}
+header .burger span {
+  width: 100%;
+  height: 2px;
+  background-color: #000;
+  position: absolute;
+  left: 0;
+  top: 50%;
+  margin-top: -1px;
+  transition: all 0.4s ease;
+  border-radius: 2px;
+}
+header .burger::before {
+  content: "";
+  width: 100%;
+  height: 2px;
+  background-color: #000;
+  position: absolute;
+  left: 0;
+  top: 0;
+  transition: all 0.4s ease;
+  border-radius: 2px;
+}
+header .burger::after {
+  content: "";
+  width: 100%;
+  height: 2px;
+  background-color: #000;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  transition: all 0.4s ease;
+  border-radius: 2px;
+}
+header .burger.active {
+  height: 18px;
+}
+header .burger.active span {
+  transform: scale(0);
+}
+header .burger.active::before {
+  top: 8px;
+  transform: rotate(45deg);
+}
+header .burger.active::after {
+  bottom: 8px;
+  transform: rotate(-45deg);
 }
 header .swiper {
   width: 100%;
@@ -216,8 +268,10 @@ header .slide-about {
 }
 header .slide-about .links {
   display: flex;
-  gap: 15px;
+  gap: 12px;
   margin-bottom: 30px;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 header .slide-about a {
   font-size: 17px;
