--- a/css/style.scss
+++ b/css/style.scss
@@ -167,15 +167,69 @@ header {
     .buttons {
         margin-right: 28px;
         display: flex;
+        align-items: center;
         button {
+            width: 24px;
             border: none;
             background-color: transparent;
             &:not(:last-child) {
                 margin-right: 17px;
             }
-            &:hover {
+            &:hover:not(.burger) {
                 transform: scale(1.2);
             }
+        }
+    }
+
+    .burger {
+        height: 18px;
+        span {
+            width: 100%;
+            height: 2px;
+            background-color: #000;
+            position: absolute;
+            left: 0;
+            top: 50%;
+            margin-top: -1px;
+            transition: all 0.4s ease;
+            border-radius: 2px;
+        }
+        &::before {
+            content: "";
+            width: 100%;
+            height: 2px;
+            background-color: #000;
+            position: absolute;
+            left: 0;
+            top: 0;
+            transition: all 0.4s ease;
+            border-radius: 2px;
+        }
+        &::after {
+            content: "";
+            width: 100%;
+            height: 2px;
+            background-color: #000;
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            transition: all 0.4s ease;
+            border-radius: 2px;
+        }
+    }
+
+    .burger.active {
+        height: 18px;
+        span {
+            transform: scale(0);
+        }
+        &::before {
+            top: 8px;
+            transform: rotate(45deg);
+        }
+        &::after {
+            bottom: 8px;
+            transform: rotate(-45deg);
         }
     }
 
@@ -229,8 +283,10 @@ header {
         text-align: center;
         .links {
             display: flex;
-            gap: 15px;
+            gap: 12px;
             margin-bottom: 30px;
+            flex-wrap: wrap;
+            justify-content: center;
         }
         a {
             font-size: 17px;
