--- a/css/media.scss
+++ b/css/media.scss
@@ -282,6 +282,10 @@
             }
         }
         
+        .burger {
+            display: block;
+        }
+        
         .swiper-slide {
             .info {
                 max-width: initial;
